# mixtape-backend

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  api.sh
.devcontainer/: devcontainer.json
api/: Cargo.toml
api/src/: auth.rs  friend.rs  main.rs  playlist.rs  safety.rs  user 2.rs  user.rs
db/: Cargo.toml
db/src/: lib.rs  models 2.rs  models.rs
utils/: Cargo.toml
utils/src/: lib.rs  phone.rs
