[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
db = { path = "../db" }
anyhow = "1.0.72"
utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
dotenv_codegen = "0.15.0"
build-time = "0.1.3"
openssl-probe = "0.1.5"
mongodb = "2.6"
chrono = "0.4.26"
thiserror = "1.0.44"
futures-util = "0.3.28"
actix-multipart = "0.6.0"
mime = "0.3.17"
rand = "0.8.5"
actix-web-actors = "4.2.0"
actix = "0.13.0"
async-trait = "0.1.72"
rustrict = "0.7.8"
serde_qs = { version = "0.12.0", features = ["actix4"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.8"

[dev-dependencies]
actix-rt = "2.8.0"
fake = "2.6.1"
rand = "0.8.5"