[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-mutex = "1.4.0"
async-trait = "0.1.74"
const-str = "0.5.6"
dotenv_codegen = "0.15.0"
mongodb = "2.7.0"
phonenumber = "0.3.3"
twilio = "1.0.2"

